[gd_scene load_steps=3 format=3 uid="uid://b55nsq4bjy3pb"]

[ext_resource type="Script" path="res://Scripts/ajustes.gd" id="1_ekggu"]
[ext_resource type="Script" path="res://Scripts/Botones/ButtonAjustes.gd" id="2_04wm1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekggu")

[node name="Atras" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.849
anchor_right = 0.108
anchor_bottom = 0.963
offset_left = 18.12
offset_top = 51.08
offset_right = 17.64
offset_bottom = -2.04004
theme_override_colors/font_hover_color = Color(0.988235, 0, 0.984314, 1)
theme_override_font_sizes/font_size = 40
text = "Atras"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.5
offset_top = -291.5
offset_right = 270.5
offset_bottom = 291.5
grow_horizontal = 2
grow_vertical = 2

[node name="puerto" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="<" type="Button" parent="VBoxContainer/puerto"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.870588, 1, 1)
theme_override_font_sizes/font_size = 30
text = " < "
flat = true
script = ExtResource("2_04wm1")

[node name="Label" type="Label" parent="VBoxContainer/puerto"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "TIPO"
horizontal_alignment = 1

[node name=">" type="Button" parent="VBoxContainer/puerto"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.870588, 1, 1)
theme_override_font_sizes/font_size = 30
text = " > "
flat = true

[node name="Tipo" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="label" type="Label" parent="VBoxContainer/Tipo"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Lectura dardo:"

[node name="lectura" type="Label" parent="VBoxContainer/Tipo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 100
text = "TIPO"

[connection signal="pressed" from="Atras" to="." method="_on_atras_pressed"]
[connection signal="pressed" from="VBoxContainer/puerto/<" to="." method="_on__pressedmenos"]
[connection signal="pressed" from="VBoxContainer/puerto/>" to="." method="_on__pressedmas"]
